<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="historyTitle">History</string>
    <string name="listingTitle">Listings</string>
    <string name="profileTitle">Profile</string>
    <string name="mapTitle">Map</string>
    <string name="searchTitle">Search</string>
    <string name="stats">Stats</string>
</resources>