...

    <item
        android:id="@+id/workerHistoryPage"
        android:title="@string/historyTitle"
        android:icon="@drawable/ic_clock" />
    <item
        android:id="@+id/workerSearchPage"
        android:title="@string/searchTitle"
        android:icon="@drawable/ic_search" />
    <item
        android:id="@+id/workerMapPage"
        android:title="@string/mapTitle"
        android:icon="@drawable/ic_map" />
...
