...
    <string name="signup_google">Sign Up With Google</string>
    <string name="signup_manually">Sign Up Manually</string>
    <string name="continue_login">Continue </string>
    <string name="remember_me">Remember Me</string>
    <string name="log_in">Log In</string>
    <string name="or">Or</string>
    <string name="EMPTY_EMAIL_TOAST">Email Required</string>
    <string name="INVALID_EMAIL_TOAST">Email Not In Format</string>
    <string name="EMPTY_PASSWORD_TOAST">Password Required</string>
    <string name="INVALID_CREDENTIALS">Wrong email or password</string>
    <string name="WebClient">User X</string>
</resources>
