...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailaddressLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@+id/etPasswordLayout"
            app:layout_constraintEnd_toEndOf="@+id/etPasswordLayout"
            app:layout_constraintStart_toStartOf="@+id/etPasswordLayout"
            app:layout_constraintTop_toTopOf="@+id/etPasswordLayout" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout" />
...

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailaddressLayout"
        android:layout_width="340dp"
        android:layout_height="67dp"
        android:layout_marginTop="30dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:text="@string/or"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueButton" />


    <View
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:background="@android:color/black"
...
